yet another round of typos

--- a/source/code-of-conduct_es.html
+++ b/source/code-of-conduct_es.html
@@ -6,7 +6,7 @@ lang: es
 
 <main role="main" class="wrapper"> <!-- main content starts here -->
   <div class="callout callout--small">
-    <h1>CÓDIGO DE CONDUCTA</h1>
+    <h1>Código de Conducta</h1>
   </div>
 
   <div class="long-text long-text--negative">
@@ -16,7 +16,7 @@ lang: es
       <p>Este código de conducta está destinado a guiar a la comunidad de IODC, y ayudar a garantizar el respeto por sobre todas las cosas; y aplica tanto para la conferencia principal como para todos los eventos previos.</p>
     </div>
     <div class="section">
-      <h2>Diversidad e Inclusividad</h2>
+      <h2>Diversidad e Inclusión</h2>
       <p>Desde IODC alentamos la participación de personas de todas las edades, culturas, razas, etnias, identidades de género, expresiones y orientaciones sexuales, ubicaciones geográficas y religiones.</p>
     </div>
 
