--- a/source/committee_es.html
+++ b/source/committee_es.html
@@ -7,7 +7,7 @@ lang: es
 <main role="main" class="wrapper"> <!-- main content starts here -->
 
   <div class="callout callout--small">
-    <h1>COMITÉ ACADÉMICO</h1>
+    <h1>Comité Académico</h1>
   </div>
 
   <ul class="section people-list">
