--- a/source/index_es.html
+++ b/source/index_es.html
@@ -8,7 +8,7 @@ hide_back_button: true
 <main role="main" class="wrapper"> <!-- main content starts here -->
 
   <div class="callout">
-    <h1><span>EL FUTURO ES ABIERTO</span></h1>
+    <h1><span>El Futuro es Abierto</span></h1>
     <h4><span>BUENOS AIRES</span> | 27 y 28 de septiembre, 2018</h4>
   </div>
 
