Redirect to form submitted page

--- a/source/call-for-proposals-form.html
+++ b/source/call-for-proposals-form.html
@@ -9,7 +9,10 @@ lang: en
     <h1>Call for Proposals</h1>
   </div>
 
-<form class="form form--google" action="https://docs.google.com/forms/d/e/1FAIpQLSfN8wnjrKzB28EzJbGWS0asCD7K4Fi8Hg2uemqec1kLoHnJqA/formResponse" method="POST" id="ss-form" target="_self" autocomplete="on" onsubmit=""><ol role="list" class="ss-question-list" style="padding-left: 0;">
+<script type="text/javascript">var submitted=false;</script>
+<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='form-submitted.html';}"></iframe>
+
+<form class="form form--google" action="https://docs.google.com/forms/d/e/1FAIpQLSfN8wnjrKzB28EzJbGWS0asCD7K4Fi8Hg2uemqec1kLoHnJqA/formResponse" method="POST" id="ss-form" target="hidden_iframe" autocomplete="on" onsubmit="submitted=true"><ol role="list" class="ss-question-list" style="padding-left: 0;">
 
 <section class="js-hidden"> <!-- Custom Line -->
     <div class="ss-form-question errorbox-good" role="listitem">
@@ -150,7 +153,7 @@ lang: en
 <span class="ss-q-other-container goog-inline-block"><input type="text" name="entry.958755899.other_option_response" value="" class="ss-q-other" id="entry_958755899_other_option_response" dir="auto" aria-label="Other"></span>
 </li></ul>
 <div class="error-message" id="1010461108_errorMessage"></div>
-<div class="required-message">This is a required question</div></div></div></div> 
+<div class="required-message">This is a required question</div></div></div></div>
 
 
 <section class="tracks-question"><!-- Custom Line -->
@@ -214,7 +217,7 @@ lang: en
     <span class="ss-choice-label">Challenge to be Addressed</span>
     </label></li></ul>
     <div class="error-message" id="1627481143_errorMessage"></div>
-    <div class="required-message">This is a required question</div></div></div></div> 
+    <div class="required-message">This is a required question</div></div></div></div>
     <div class="ss-form-question errorbox-good" role="listitem">
 </section><!-- Custom Line -->
 
@@ -242,7 +245,7 @@ lang: en
     <span class="ss-choice-label">Regional Dialogues</span>
     </label></li></ul>
     <div class="error-message" id="1305134191_errorMessage"></div>
-    <div class="required-message">This is a required question</div></div></div></div> 
+    <div class="required-message">This is a required question</div></div></div></div>
 </section><!-- Custom Line -->
 
 <section class="impact-items"><!-- Custom Line -->
@@ -333,7 +336,7 @@ lang: en
 <textarea name="entry.1020897604" rows="8" cols="0" class="ss-q-long" id="entry_1020897604" dir="auto" aria-label="Abstract  " aria-required="true" required=""></textarea>
 <div class="error-message" id="1599778264_errorMessage"></div>
 <div class="required-message">This is a required question</div>
-</div></div></div> 
+</div></div></div>
 
 <section class="format-question"><!-- Custom Line -->
   <div class="ss-form-question errorbox-good" role="listitem">
