--- a/source/pre-register-form.html
+++ b/source/pre-register-form.html
@@ -2,6 +2,7 @@
 layout: default
 title: IODC18
 lang: en
+addjs: pre-register-form.js
 ---
 
 <main role="main" class="wrapper"> <!-- main content starts here -->
@@ -9,7 +10,10 @@ lang: en
     <h1>Pre-Register</h1>
   </div>
 
-  <!-- Custom Line --><form class="form form--google" action="https://docs.google.com/forms/d/e/1FAIpQLSdtQTqYhfhCbuMeF0lkWw_cKF9lVQXI5Vb8Elie12whlvzDlg/formResponse" method="POST" id="ss-form" target="_self" autocomplete="on" onsubmit=""><ol role="list" class="ss-question-list" style="padding-left: 0;">
+    <script type="text/javascript">var submitted=false;</script>
+    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='form-submitted.html';}"></iframe>
+
+  <!-- Custom Line --><form class="form form--google" action="https://docs.google.com/forms/d/e/1FAIpQLSdtQTqYhfhCbuMeF0lkWw_cKF9lVQXI5Vb8Elie12whlvzDlg/formResponse" method="POST" id="ss-form" target="hidden_iframe" autocomplete="on" onsubmit="submitted=true"><ol role="list" class="ss-question-list" style="padding-left: 0;">
 
 
 <!-- Custom Line --><section class="js-hidden">
