--- a/source/call-for-proposals-form.html
+++ b/source/call-for-proposals-form.html
@@ -9,10 +9,10 @@ lang: en
     <h1>Call for Proposals</h1>
   </div>
 
-<script type="text/javascript">var submitted=false;</script>
-<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='form-submitted.html';}"></iframe>
+<!-- <script type="text/javascript">var submitted=false;</script>
+<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='form-submitted.html';}"></iframe> -->
 
-<form class="form form--google" action="https://docs.google.com/forms/d/e/1FAIpQLSfN8wnjrKzB28EzJbGWS0asCD7K4Fi8Hg2uemqec1kLoHnJqA/formResponse" method="POST" id="ss-form" target="hidden_iframe" autocomplete="on" onsubmit="submitted=true"><ol role="list" class="ss-question-list" style="padding-left: 0;">
+<form class="form form--google" action="https://docs.google.com/forms/d/e/1FAIpQLSfN8wnjrKzB28EzJbGWS0asCD7K4Fi8Hg2uemqec1kLoHnJqA/formResponse" method="POST" id="ss-form" target="_self" autocomplete="on" onsubmit="submitted=true"><ol role="list" class="ss-question-list" style="padding-left: 0;">
 
 <section class="js-hidden"> <!-- Custom Line -->
     <div class="ss-form-question errorbox-good" role="listitem">
