Remove required from organization field

--- a/source/pre-register-form.html
+++ b/source/pre-register-form.html
@@ -68,13 +68,12 @@ addjs: pre-register-form.js
 </div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
 <div dir="auto" class="ss-item ss-item-required ss-text"><div class="ss-form-entry">
 <label class="ss-q-item-label" for="entry_1575319190"><div class="ss-q-title">Organization
-<label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
-<span class="ss-required-asterisk" aria-hidden="true">*</span></div>
+<label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label></div>
 <div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
 
-<input type="text" name="entry.1575319190" value="" class="ss-q-short" id="entry_1575319190" dir="auto" aria-label="Organization  " aria-required="true" required="" title="">
+<input type="text" name="entry.1575319190" value="" class="ss-q-short" id="entry_1575319190" dir="auto" aria-label="Organization  " title="">
 <div class="error-message" id="1247889689_errorMessage"></div>
-<div class="required-message">This is a required question</div>
+<div class="required-message" style="visibility: hidden;">This is a required question</div>
 </div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
 <div dir="auto" class="ss-item ss-item-required ss-text"><div class="ss-form-entry">
 <label class="ss-q-item-label" for="entry_1184610319"><div class="ss-q-title">Email
