Remove duplicated texts

--- a/source/call-for-proposals-form.html
+++ b/source/call-for-proposals-form.html
@@ -314,7 +314,7 @@ lang: en
 
 <div class="ss-form-question errorbox-good" role="listitem">
 <div dir="auto" class="ss-item ss-item-required ss-paragraph-text"><div class="ss-form-entry">
-<label class="ss-q-item-label" for="entry_213082355"><div class="ss-q-title">Session Objective (One sentence describing purpose and intended outcomes of proposed session)
+<label class="ss-q-item-label" for="entry_213082355"><div class="ss-q-title">Session Objective
 <label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
 <span class="ss-required-asterisk" aria-hidden="true">*</span></div>
 <!-- Custom Line -->
@@ -322,7 +322,7 @@ lang: en
 <!-- Custom Line -->
 </label>
 
-<textarea name="entry.213082355" rows="8" cols="0" class="ss-q-long" id="entry_213082355" dir="auto" aria-label="Session Objective (One sentence describing purpose and intended outcomes of proposed session)  " aria-required="true" required=""></textarea>
+<textarea name="entry.213082355" rows="8" cols="0" class="ss-q-long" id="entry_213082355" dir="auto" aria-label="Session Objective  " aria-required="true" required=""></textarea>
 <div class="error-message" id="571230420_errorMessage"></div>
 <div class="required-message">This is a required question</div>
 </div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
@@ -371,14 +371,14 @@ lang: en
 
 <div class="ss-form-question errorbox-good" role="listitem">
 <div dir="auto" class="ss-item  ss-paragraph-text"><div class="ss-form-entry">
-<label class="ss-q-item-label" for="entry_238007859"><div class="ss-q-title">Format: Additional Information (Additional details on format and approach to session moderation)
+<label class="ss-q-item-label" for="entry_238007859"><div class="ss-q-title">Format: Additional Information
 </div>
 <!-- Custom Line -->
 <div class="ss-q-help ss-secondary-text" dir="auto">Additional details on format and approach to session moderation</div></label>
 <!-- Custom Line -->
 </label>
 
-<textarea name="entry.238007859" rows="8" cols="0" class="ss-q-long" id="entry_238007859" dir="auto" aria-label="Format: Additional Information (Additional details on format and approach to session moderation)  "></textarea>
+<textarea name="entry.238007859" rows="8" cols="0" class="ss-q-long" id="entry_238007859" dir="auto" aria-label="Format: Additional Information  "></textarea>
 <div class="error-message" id="710259911_errorMessage"></div>
 <div class="required-message">This is a required question</div>
 </div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
