--- a/source/call-for-proposals-form_es.html
+++ b/source/call-for-proposals-form_es.html
@@ -6,7 +6,7 @@ lang: es
 
 <main role="main" class="wrapper"> <!-- main content starts here -->
   <div class="callout callout--small">
-    <h1>Llamado a Propuestas - Requisitos para ser parte de la conferencia.</h1>
+    <h1>Llamado a Propuestas</h1>
   </div>
 
 <script type="text/javascript">var submitted=false;</script>
@@ -314,7 +314,7 @@ lang: es
 
 <div class="ss-form-question errorbox-good" role="listitem">
 <div dir="auto" class="ss-item ss-item-required ss-paragraph-text"><div class="ss-form-entry">
-<label class="ss-q-item-label" for="entry_213082355"><div class="ss-q-title">Objetivo de la Sesión (una oración que describa el propósito y los resultados previstos de la sesión propuesta)
+<label class="ss-q-item-label" for="entry_213082355"><div class="ss-q-title">Objetivo de la Sesión
 <label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
 <span class="ss-required-asterisk" aria-hidden="true">*</span></div>
 <!-- Custom Line -->
@@ -322,7 +322,7 @@ lang: es
 <!-- Custom Line -->
 </label>
 
-<textarea name="entry.213082355" rows="8" cols="0" class="ss-q-long" id="entry_213082355" dir="auto" aria-label="Objetivo de la Sesión (una oración que describa el propósito y los resultados previstos de la sesión propuesta)  " aria-required="true" required=""></textarea>
+<textarea name="entry.213082355" rows="8" cols="0" class="ss-q-long" id="entry_213082355" dir="auto" aria-label="Objetivo de la Sesión  " aria-required="true" required=""></textarea>
 <div class="error-message" id="571230420_errorMessage"></div>
 <div class="required-message">Esta pregunta es obligatoria</div>
 </div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
@@ -371,14 +371,14 @@ lang: es
 
 <div class="ss-form-question errorbox-good" role="listitem">
 <div dir="auto" class="ss-item  ss-paragraph-text"><div class="ss-form-entry">
-<label class="ss-q-item-label" for="entry_238007859"><div class="ss-q-title">Formato: Información Adicional (Detalles adicionales sobre el formato y el enfoque para la moderación de la sesión)
+<label class="ss-q-item-label" for="entry_238007859"><div class="ss-q-title">Formato: Información Adicional
 </div>
 <!-- Custom Line -->
 <div class="ss-q-help ss-secondary-text" dir="auto">Detalles adicionales sobre el formato y el enfoque para la moderación de la sesión</div></label>
 <!-- Custom Line -->
 </label>
 
-<textarea name="entry.238007859" rows="8" cols="0" class="ss-q-long" id="entry_238007859" dir="auto" aria-label="Formato: Información Adicional (Detalles adicionales sobre el formato y el enfoque para la moderación de la sesión)  "></textarea>
+<textarea name="entry.238007859" rows="8" cols="0" class="ss-q-long" id="entry_238007859" dir="auto" aria-label="Formato: Información Adicional  "></textarea>
 <div class="error-message" id="710259911_errorMessage"></div>
 <div class="required-message">Esta pregunta es obligatoria</div>
 </div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
