Change language choice

--- a/source/call-for-proposals-form_es.html
+++ b/source/call-for-proposals-form_es.html
@@ -37,10 +37,11 @@ lang: es
 
     <ul class="ss-choices" role="radiogroup" aria-label="Language of Submission  "><li class="ss-choice-item">
     <label><span class="ss-choice-item-control goog-inline-block">
-<!-- Custom Line --><input checked type="radio" name="entry.234795131" value="English" id="group_234795131_1" role="radio" class="ss-q-radio" aria-label="English" required="" aria-required="true"></span>
+    <input type="radio" name="entry.234795131" value="English" id="group_234795131_1" role="radio" class="ss-q-radio" aria-label="English" required="" aria-required="true"></span>
     <span class="ss-choice-label">English</span>
     </label></li> <li class="ss-choice-item">
-    <label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.234795131" value="Spanish" id="group_234795131_2" role="radio" class="ss-q-radio" aria-label="Spanish" required="" aria-required="true"></span>
+    <label><span class="ss-choice-item-control goog-inline-block">
+<!-- Custom Line --><input checked type="radio" name="entry.234795131" value="Spanish" id="group_234795131_2" role="radio" class="ss-q-radio" aria-label="Spanish" required="" aria-required="true"></span>
     <span class="ss-choice-label">Spanish</span>
     </label></li></ul>
     <div class="error-message" id="1631886485_errorMessage"></div>
