Change selected language for pre register form

--- a/source/pre-register-form_es.html
+++ b/source/pre-register-form_es.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: IODC18
-lang: en
+lang: es
 addjs: pre-register-form.js
 ---
 
@@ -25,10 +25,11 @@ addjs: pre-register-form.js
 <div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
 <ul class="ss-choices" role="radiogroup" aria-label="Preffered Language  "><li class="ss-choice-item">
 <label><span class="ss-choice-item-control goog-inline-block">
-  <!-- Custom Line --><input checked type="radio" name="entry.1485970356" value="English" id="group_1485970356_1" role="radio" class="ss-q-radio" aria-label="English" required="" aria-required="true"></span>
+<input type="radio" name="entry.1485970356" value="English" id="group_1485970356_1" role="radio" class="ss-q-radio" aria-label="English" required="" aria-required="true"></span>
 <span class="ss-choice-label">English</span>
 </label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1485970356" value="Spanish" id="group_1485970356_2" role="radio" class="ss-q-radio" aria-label="Spanish" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block">
+<!-- Custom Line --><input checked type="radio" name="entry.1485970356" value="Spanish" id="group_1485970356_2" role="radio" class="ss-q-radio" aria-label="Spanish" required="" aria-required="true"></span>
 <span class="ss-choice-label">Spanish</span>
 </label></li></ul>
 <div class="error-message" id="1399638187_errorMessage"></div>
