Replace 'This is a required question' with 'Esta pregunta es obligatoria'

--- a/source/pre-register-form_es.html
+++ b/source/pre-register-form_es.html
@@ -33,7 +33,7 @@ addjs: pre-register-form.js
 <span class="ss-choice-label">Spanish</span>
 </label></li></ul>
 <div class="error-message" id="1399638187_errorMessage"></div>
-<div class="required-message">This is a required question</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
+<div class="required-message">Esta pregunta es obligatoria</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
 <!-- Custom Line --></section>
 
 
@@ -45,7 +45,7 @@ addjs: pre-register-form.js
 
 <input type="text" name="entry.1515706742" value="" class="ss-q-short" id="entry_1515706742" dir="auto" aria-label="Nombre  " aria-required="true" required="" title="">
 <div class="error-message" id="821296883_errorMessage"></div>
-<div class="required-message">This is a required question</div>
+<div class="required-message">Esta pregunta es obligatoria</div>
 </div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
 <div dir="auto" class="ss-item ss-item-required ss-text"><div class="ss-form-entry">
 <label class="ss-q-item-label" for="entry_1679513861"><div class="ss-q-title">Apellido
@@ -55,7 +55,7 @@ addjs: pre-register-form.js
 
 <input type="text" name="entry.1679513861" value="" class="ss-q-short" id="entry_1679513861" dir="auto" aria-label="Apellido  " aria-required="true" required="" title="">
 <div class="error-message" id="554224303_errorMessage"></div>
-<div class="required-message">This is a required question</div>
+<div class="required-message">Esta pregunta es obligatoria</div>
 </div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
 <div dir="auto" class="ss-item ss-item-required ss-text"><div class="ss-form-entry">
 <label class="ss-q-item-label" for="entry_1357817164"><div class="ss-q-title">Cargo
@@ -65,7 +65,7 @@ addjs: pre-register-form.js
 
 <input type="text" name="entry.1357817164" value="" class="ss-q-short" id="entry_1357817164" dir="auto" aria-label="Cargo  " aria-required="true" required="" title="">
 <div class="error-message" id="1074863019_errorMessage"></div>
-<div class="required-message">This is a required question</div>
+<div class="required-message">Esta pregunta es obligatoria</div>
 </div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
 <div dir="auto" class="ss-item ss-item-required ss-text"><div class="ss-form-entry">
 <label class="ss-q-item-label" for="entry_1575319190"><div class="ss-q-title">Organización a la que representás
@@ -74,7 +74,7 @@ addjs: pre-register-form.js
 
 <input type="text" name="entry.1575319190" value="" class="ss-q-short" id="entry_1575319190" dir="auto" aria-label="Organización a la que representás  " title="">
 <div class="error-message" id="1247889689_errorMessage"></div>
-<div class="required-message" style="visibility: hidden;">This is a required question</div>
+<div class="required-message" style="visibility: hidden;">Esta pregunta es obligatoria</div>
 </div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
 <div dir="auto" class="ss-item ss-item-required ss-text"><div class="ss-form-entry">
 <label class="ss-q-item-label" for="entry_1184610319"><div class="ss-q-title">Correo electrónico
@@ -84,7 +84,7 @@ addjs: pre-register-form.js
 
 <input type="email" name="entry.1184610319" value="" class="ss-q-short" id="entry_1184610319" dir="auto" aria-label="Correo electrónico  Please enter a valid email" aria-required="true" required="" title="Please enter a valid email">
 <div class="error-message" id="2023801737_errorMessage">Please enter a valid email</div>
-<div class="required-message">This is a required question</div>
+<div class="required-message">Esta pregunta es obligatoria</div>
 </div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
 <div dir="auto" class="ss-item ss-item-required ss-text"><div class="ss-form-entry">
 <label class="ss-q-item-label" for="entry_1826866064"><div class="ss-q-title">Teléfono
@@ -94,7 +94,7 @@ addjs: pre-register-form.js
 
 <input type="text" name="entry.1826866064" value="" class="ss-q-short" id="entry_1826866064" dir="auto" aria-label="Teléfono  " aria-required="true" required="" title="">
 <div class="error-message" id="172163926_errorMessage"></div>
-<div class="required-message">This is a required question</div>
+<div class="required-message">Esta pregunta es obligatoria</div>
 </div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
 <div dir="auto" class="ss-item ss-item-required ss-text"><div class="ss-form-entry">
 <label class="ss-q-item-label" for="entry_1409752637"><div class="ss-q-title">País
@@ -104,7 +104,7 @@ addjs: pre-register-form.js
 
 <input type="text" name="entry.1409752637" value="" class="ss-q-short" id="entry_1409752637" dir="auto" aria-label="País  " aria-required="true" required="" title="">
 <div class="error-message" id="666434689_errorMessage"></div>
-<div class="required-message">This is a required question</div>
+<div class="required-message">Esta pregunta es obligatoria</div>
 </div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
 <div dir="auto" class="ss-item ss-item-required ss-radio"><div class="ss-form-entry">
 <label class="ss-q-item-label" for="entry_237309065"><div class="ss-q-title">Región
@@ -136,7 +136,7 @@ addjs: pre-register-form.js
 <span class="ss-choice-label">Africa Sub-Sahariana</span>
 </label></li></ul>
 <div class="error-message" id="237309065_errorMessage"></div>
-<div class="required-message">This is a required question</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
+<div class="required-message">Esta pregunta es obligatoria</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
 <div dir="auto" class="ss-item ss-item-required ss-radio"><div class="ss-form-entry">
 <label class="ss-q-item-label" for="entry_1010461108"><div class="ss-q-title">Género
 <label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
@@ -161,7 +161,7 @@ addjs: pre-register-form.js
 <span class="ss-q-other-container goog-inline-block"><input type="text" name="entry.958755899.other_option_response" value="" class="ss-q-other" id="entry_958755899_other_option_response" dir="auto" aria-label="Preferís auto-describirte"></span>
 </li></ul>
 <div class="error-message" id="1010461108_errorMessage"></div>
-<div class="required-message">This is a required question</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
+<div class="required-message">Esta pregunta es obligatoria</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
 <div dir="auto" class="ss-item ss-item-required ss-radio"><div class="ss-form-entry">
 <label class="ss-q-item-label" for="entry_234022177"><div class="ss-q-title">Tipo de registro
 <label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
@@ -198,7 +198,7 @@ addjs: pre-register-form.js
 <span class="ss-q-other-container goog-inline-block"><input type="text" name="entry.1214914657.other_option_response" value="" class="ss-q-other" id="entry_1214914657_other_option_response" dir="auto" aria-label="Otro"></span>
 </li></ul>
 <div class="error-message" id="234022177_errorMessage"></div>
-<div class="required-message">This is a required question</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
+<div class="required-message">Esta pregunta es obligatoria</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
 <div dir="auto" class="ss-item ss-item-required ss-radio"><div class="ss-form-entry">
 <label class="ss-q-item-label" for="entry_1344197881"><div class="ss-q-title">¿Necesitás asistencia al viajero?
 <label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
@@ -214,7 +214,7 @@ addjs: pre-register-form.js
 <span class="ss-choice-label">No</span>
 </label></li></ul>
 <div class="error-message" id="1344197881_errorMessage"></div>
-<div class="required-message">This is a required question</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
+<div class="required-message">Esta pregunta es obligatoria</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
 <div dir="auto" class="ss-item ss-item-required ss-radio"><div class="ss-form-entry">
 <label class="ss-q-item-label" for="entry_447979614"><div class="ss-q-title">¿Tenés asistencia al viajero?
 <label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
@@ -230,7 +230,7 @@ addjs: pre-register-form.js
 <span class="ss-choice-label">No</span>
 </label></li></ul>
 <div class="error-message" id="447979614_errorMessage"></div>
-<div class="required-message">This is a required question</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
+<div class="required-message">Esta pregunta es obligatoria</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
 <div dir="auto" class="ss-item ss-item-required ss-radio"><div class="ss-form-entry">
 <label class="ss-q-item-label" for="entry_1563561307"><div class="ss-q-title">¿Necesitás VISA?
 <label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
@@ -246,7 +246,7 @@ addjs: pre-register-form.js
 <span class="ss-choice-label">No</span>
 </label></li></ul>
 <div class="error-message" id="1563561307_errorMessage"></div>
-<div class="required-message">This is a required question</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
+<div class="required-message">Esta pregunta es obligatoria</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
 <div dir="auto" class="ss-item ss-item-required ss-radio"><div class="ss-form-entry">
 <label class="ss-q-item-label" for="entry_1501237062"><div class="ss-q-title">¿Tenés una VISA válida para viajar a Argentina?
 <label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
@@ -262,7 +262,7 @@ addjs: pre-register-form.js
 <span class="ss-choice-label">No</span>
 </label></li></ul>
 <div class="error-message" id="1501237062_errorMessage"></div>
-<div class="required-message">This is a required question</div></div></div></div>
+<div class="required-message">Esta pregunta es obligatoria</div></div></div></div>
 <input type="hidden" name="draftResponse" value="[null,null,&quot;1084181022544073787&quot;]
 ">
 <input type="hidden" name="pageHistory" value="0">
